# countries-telegram-bot

./: .envexample  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yaml  main.py  manage.py  pyproject.toml  pytest.ini
aiogram_layer/: main.py
aiogram_layer/src/: __init__.py  app.py  buttons.py  callbacks.py  constants.py  handlers.py  keyboards.py  messages.py  settings.py  states.py  validators.py
aiogram_layer/src/tests/: cases.py  fixtures.py  keyboards.py  mocks.py  test_handlers.py  test_validators.py
cache/: cache_module.py  cache_settings.py
cache/test/: fixtures.py  methods.py  test_cache.py
django_layer/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_layer/countries_app/: admin.py  apps.py  models.py
django_layer/countries_app/management/commands/: initadmin.py  runbot.py
django_layer/countries_app/migrations/: 0001_initial.py  0002_remove_city_geoname_id_city_id.py  0003_remove_country_capital_capital.py  0004_city_is_capital_delete_capital.py  0005_alter_city_latitude_alter_city_longitude.py
services/: abstract_uow.py  city_service.py  country_service.py  currency_code.py  service_schemas.py
services/repositories/api/: abstract_api_repository.py  api_schemas.py  api_settings.py  country_detail.py  currency.py  geocoder.py  weather.py
services/repositories/api/tests/: cases.py  fixture.py  mocks.py  test_country_detail.py  (+3 more)
services/repositories/db/: abstract_db_repository.py  cities.py  countries.py  schemas.py  task.py
services/tests/: test_country_service.py
tasks/: tasks.py
(+3 files in other folders)
